--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div id="bg"></div>
       <div class="content">
         <header>
-          <h2 id="text3">Em yêu Anh có phải không nào ._.</h2>
+          <h2 id="text3">Em thích Anh có phải không ạ ^^</h2>
           <h4 id="text4">
             Nếu Em không trả lời mà thoát ra tức là iu Anh rùi đó nha :v
           </h4>
